--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="TestMaven1.TestMVN.App" hash-for-method="tst">tst</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="TestMaven1.TestMVN.AppTest" hash-for-method="sts">sts</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">TestMaven1.TestMVN.App</span>
+              <span class="class-name">TestMaven1.TestMVN.AppTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="tst">
-                  </a> <!-- tst -->
-                  <span class="method-name">tst</span>
+                  <a name="sts">
+                  </a> <!-- sts -->
+                  <span class="method-name">sts</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -144,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;TestMaven1.TestMVN.App&quot;/&gt;
+      &lt;class name=&quot;TestMaven1.TestMVN.AppTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -186,8 +186,8 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'tst')
-data.setCell(0, 2, 'TestMaven1.TestMVN.App')
+data.setCell(0, 1, 'sts')
+data.setCell(0, 2, 'TestMaven1.TestMVN.AppTest')
 data.setCell(0, 3, 8);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
@@ -219,9 +219,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">TestMaven1.TestMVN.App</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">TestMaven1.TestMVN.AppTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">tst</span>
+                <span class="method-name">sts</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
